--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.kamar18lt1.talkxgosip">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            tools:replace="android:value"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"
+            tools:replace="android:value" />
+
         <activity
             android:name=".FeedsGosip.GosipActivity"
-            android:theme="@style/AppTheme"
-            />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoActionBar">
@@ -28,10 +30,11 @@
         </activity>
         <activity
             android:name=".FBLoginOrGoogleLogin.LoginActivity"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".NicknameRegister.RegisterNicknameActivity"
             android:theme="@style/NoActionBar"></activity>
-        <activity android:name=".NicknameRegister.RegisterNicknameActivity" android:theme="@style/NoActionBar">
-
-        </activity>
+        <activity android:name=".AdminPackage.AdminActivity"></activity>
     </application>
 
 </manifest>
